--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,22 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--https://www.webjars.org/-->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 
 	</dependencies>
 
