send email when new location saved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.password=stodopl1
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.show.sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=spammailera1@gmail.com
+spring.mail.password=Password1@
+spring.mail.properties.mail.smtp.starttls.enable=true
+sprinng.mail.properties.mail.smtp.starttls.require=true
+sprinng.mail.properties.mail.smtp.auth=true
