--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.19</version>
+		</dependency>
+
+
 		<!--https://www.webjars.org/-->
 		<dependency>
 			<groupId>org.webjars</groupId>
